--- a/app/Resources/public/css/global.css
+++ b/app/Resources/public/css/global.css
@@ -30,17 +30,40 @@ body {
 }
 
 .bg-1 {
-    border: 1px solid rgba(21, 37, 33, 0.08);
-    color: white;
+    border: 1px solid rgba(21, 37, 33, 0);
+    position: relative;
+    color: #000;
     /* background-color: #d2eaff; */
-    background-color: #1B5E20;
+    background-color: #0277bd;
+}
+
+.bg-1>* {
+    position: relative;
+}
+
+.bg-1::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: url('https://i.imgur.com/PzIUINd.png');
+    background-repeat: repeat;
+    opacity: 0.5;
+    z-index: 0;
 }
 
 .bg-2 {
-    border: 1px solid rgba(21, 37, 33, 0.08);
-    color: white;
+    /* border: 1px solid rgba(21, 37, 33, 0.08); */
+    color: #000;
     /* background-color: #d2eaff; */
-    background-color: #4c8c4a;
+    background-color: #004c8c;
+}
+
+.bg-3 {
+    background-color: #58a5f0;
 }
 
 .status {
@@ -52,8 +75,8 @@ body {
     padding-bottom: 0.75em;
     padding-left: 2rem;
     padding-right: 2rem;
-    border-bottom: 1px solid lightgray;
-    background-color: #fcfcfc;
+    border-bottom: 1px solid #E0E0E0;
+    background-color: #fff;
 }
 
 .tasks {
