--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -53,7 +53,7 @@
 
         </div>
         <div class='col-1 status'>
-            <button type="button" class="btn btn-outline-secondary btn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><div class='fa fa-circle-o'></div></button>
+            <button type="button" class="btn btn-light btn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><div class='fa fa-circle-o'></div></button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" data-value='0' href="javascript: void(0);">Not Done</a>
                 <a class="dropdown-item" data-value='1' href="javascript: void(0);">In Progress</a>
