--- a/web/css/32098b9.css
+++ b/web/css/32098b9.css
@@ -11270,7 +11270,8 @@ body {
 }
 
 .bg-3 {
-    background-color: #58a5f0;
+    /* background-color: #58a5f0; */
+    background-color: #0277bd;
 }
 
 .status {
