assetic errors fix

--- a/app/Resources/views/AppBar.html.twig
+++ b/app/Resources/views/AppBar.html.twig
@@ -39,9 +39,10 @@
                         <div class="input-group" style='margin-left: 1rem;'>
                             
                             <input type="text" class="form-control" placeholder="Search tasks..." aria-label="Search for...">
-                            <span class="input-group-btn">
+                            <span class="input-group-addon"><span class='fa fa-search'></span></span>
+                            {# <span class="input-group-btn">
                                 <button class="btn btn-primary" type="button"><div class='fa fa-search'></div></button>
-                            </span>
+                            </span> #}
                         </div>
                     </div>
                 </div>
