--- a/app/Resources/public/css/global.css
+++ b/app/Resources/public/css/global.css
@@ -103,7 +103,9 @@ body {
     font-size: 1.5rem;
     font-weight: 700;
     letter-spacing: -0.025em;
+    white-space: nowrap;
     color: #ffc107;
+    overflow: hidden;
 }
 
 .column-labels {
