--- a/web/css/32098b9_part_4_global_1.css
+++ b/web/css/32098b9_part_4_global_1.css
@@ -103,7 +103,9 @@ body {
     font-size: 1.5rem;
     font-weight: 700;
     letter-spacing: -0.025em;
+    white-space: nowrap;
     color: #ffc107;
+    overflow: hidden;
 }
 
 .column-labels {
